--- a/package.json
+++ b/package.json
@@ -1,42 +1,21 @@
 {
-    "name": "tomorrow-and-tomorrow-night-operator-mono-theme",
-    "displayName": "Tomorrow and Tomorrow Night Operator Mono Theme",
-    "description": "Copies of the Tomorrow and Tomorrow Night themes with settings to mark certain items as italics and bold",
-    "version": "0.0.6",
-    "publisher": "chiragpat",
+    "name": "tomorrow-night-operator-custom",
+    "displayName": "Tomorrow Night Operator Custom",
+    "description": "",
+    "version": "0.0.1",
+    "publisher": "jlangston",
     "engines": {
-        "vscode": "^1.13.0"
+        "vscode": "^1.20.0"
     },
-    "license": "MIT",
     "categories": [
         "Themes"
     ],
-    "repository": {
-		"type": "git",
-		"url": "https://github.com/chiragpat/tomorrow-and-tomorrow-night-operator-mono-theme.git"
-	},
-    "icon":"icon.png",
     "contributes": {
         "themes": [
             {
-                "label": "Tomorrow Night Bright Operator Mono",
+                "label": "Tomorrow Night Operator Custom",
                 "uiTheme": "vs-dark",
-                "path": "./themes/Tomorrow_Night_Bright_OperatorMono.tmTheme"
-            },
-            {
-                "label": "Tomorrow Night Eighties Operator Mono",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Tomorrow_Night_Eighties_OperatorMono.tmTheme"
-            },
-            {
-                "label": "Tomorrow Night Operator Mono",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Tomorrow_Night_OperatorMono.tmTheme"
-            },
-            {
-                "label": "Tomorrow Operator Mono",
-                "uiTheme": "vs",
-                "path": "./themes/Tomorrow_OperatorMono.tmTheme"
+                "path": "./themes/Tomorrow Night Operator Custom-color-theme.json"
             }
         ]
     }
